# csg2024-devops

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  deploy-aks.sh
src/: controllers.rs  main.rs
src/frontend/: index.html
team/: values.yaml
team/templates/: service.yaml
