[package]
name = "rusters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full", "macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
serde = { version = "1.0.194", features = ["derive"] }
